Refactored endpoints using marshmallow schemas.
